  show the text.
- Player buttons have a tooltip.
- The first argument of PlayerTextBox showInput if now the default value. If you save an
  older project in 1.5.0+ make sure to check showInput uses if you used the old first
  parameter and change to showInput("", ...). Old Projects that aren't saved in 1.5.0+
  continue to work as they did before.

Fixed Bugs:
- JS imports work even when the files are in different directories.

=================
Version 1.4.5.0
=================

New Features:
- PlayerMetronome: setBeatResource accepts now an array of Sound Resources.
- Metronomes can now use a set of Sound Resoures to play instead of only a single one.
- Custom Metronome SFX with multiple sound files can be registered by putting a
  folder of sound files into the sfx folder.
- New Settings:
  - Default device commands of PlayerMetronome.
  - Size of PlayerMetronome
  - Hide timeout of PlayerTextBox
- Keyboard shortcuts of PlayerNotification can be oerriden via setShortcut and
  the default shortcuts were changed to more easilly accessable keys, which now have
  their own settings bindings.

Changes:
- If no more sound emitters are found when trying to play a sound an there are
  paused emitters waiting, cannibalize the first waiting emitter to be able to play
  the sound.
- Added a new default SFX to the Metronome: Lub-Dub
- Project preview shows the project name instead of 404 if no Title Card is set.
- Project name is displayed in the Project Card details above the describtion.
- Buttons in the Player now show the shortcut needed to activate them.
- Linux builds are now supprted with gcc.

Fixed Bugs:
- Fixed a crash occurring when stopping a debug session mid Scene transition.
- Fixed a UI bug causing colors of buttons in button prompts being ignored.
- Fixed buttons always being rendered as html when comming from EOS scripts.
- Fixed SceneManager (pages) function: isEnabled in eval expressions.